--- a/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
+++ b/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/FirstFragment"
         android:name="com.example.moodsync.FirstFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/get_started_fragment">
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
@@ -19,20 +19,23 @@
         android:id="@+id/SecondFragment"
         android:name="com.example.moodsync.SecondFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/styles">
+        tools:layout="@layout/home_page_fragment">
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
         <action
             android:id="@+id/action_SecondFragment_to_addMoodActivityFragment"
             app:destination="@id/addMoodActivityFragment" />
+        <action
+            android:id="@+id/action_SecondFragment_to_moodHistoryFragment"
+            app:destination="@id/moodHistoryFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/addMoodActivityFragment"
         android:name="com.example.moodsync.AddMoodActivity"
         android:label="Add Mood"
-        tools:layout="@layout/addmoodfragment">
+        tools:layout="@layout/add_mood_fragment">
         <action
             android:id="@+id/action_addMoodActivityFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
@@ -45,10 +48,23 @@
         android:id="@+id/addMoodActivityFragment2"
         android:name="com.example.moodsync.AddMoodActivity"
         android:label="Add Mood 2"
-        tools:layout="@layout/addmoodfragment2">
+        tools:layout="@layout/add_mood_fragment2">
         <action
             android:id="@+id/action_addMoodActivityFragment2_to_SecondFragment"
             app:destination="@id/SecondFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/moodHistoryFragment"
+        android:name="com.example.moodsync.MoodHistoryFragment"
+        android:label="Mood History"
+        tools:layout="@layout/mood_history_fragment">
+        <action
+            android:id="@+id/action_moodHistoryFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
+        <action
+            android:id="@+id/action_moodHistoryFragment_to_addMoodActivityFragment"
+            app:destination="@id/addMoodActivityFragment" />
     </fragment>
 
 </navigation>
