--- a/code/MoodSync/app/src/main/res/values/colors.xml
+++ b/code/MoodSync/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="original_button_color">#5F9A9A</color>
+
+        <!-- ... other color definitions ... -->
+        <color name="button_normal">#5F9A9A</color>
+        <color name="button_selected">#7FBFBF</color>
+
+
 </resources>
