--- a/code/MoodSync/app/src/main/res/layout/mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/mood_card_item.xml
@@ -8,7 +8,7 @@
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
     <LinearLayout
-        android:layout_width="713dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
@@ -20,6 +20,13 @@
             android:textSize="20sp"
             android:textStyle="bold" />
         <TextView
+            android:id="@+id/moodDescriptionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:textColor="#A0A0A0"
+            android:textSize="14sp" />
+        <TextView
             android:id="@+id/moodEmojiTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,5 +34,4 @@
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
