--- a/code/MoodSync/app/src/main/res/layout/add_mood_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/add_mood_fragment.xml
@@ -13,14 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <View
-            android:id="@+id/rectangle_1"
-            android:layout_width="182dp"
-            android:layout_height="160dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="214dp"
-            android:layout_marginTop="126dp"
-            android:background="@drawable/rectangle_1" />
+
 
         <Spinner
             android:id="@+id/main_card"
@@ -204,13 +197,16 @@
             android:textColor="#000000"
             android:textSize="16sp" />
 
+
         <View
             android:id="@+id/rectangle_2"
-            android:layout_width="182dp"
-            android:layout_height="160dp"
+            android:layout_width="349dp"
+            android:layout_height="166dp"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="15dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="29dp"
             android:layout_marginTop="126dp"
+            android:layout_marginEnd="33dp"
             android:background="@drawable/rectangle_1" />
 
         <ImageView
@@ -219,50 +215,33 @@
             android:layout_height="42dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="79dp"
-            android:layout_marginTop="176dp"
+            android:layout_marginStart="176dp"
+            android:layout_marginTop="168dp"
             android:src="@drawable/photos" />
 
         <TextView
             android:id="@+id/add_photos"
             android:layout_width="138dp"
             android:layout_height="25dp"
+            android:layout_alignEnd="@+id/rectangle_2"
             android:layout_marginStart="35dp"
             android:layout_marginTop="223dp"
+            android:layout_marginEnd="116dp"
             android:gravity="center_horizontal|top"
             android:lineSpacingExtra="8sp"
             android:text="Add from Photos"
             android:textAppearance="@style/add_from_ph" />
-
-        <ImageView
-            android:id="@+id/camera"
-            android:layout_width="49dp"
-            android:layout_height="42dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="280dp"
-            android:layout_marginTop="176dp"
-            android:src="@drawable/camera" />
-
-        <TextView
-            android:id="@+id/add_camera"
-            android:layout_width="145dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="230dp"
-            android:layout_marginTop="223dp"
-            android:gravity="center_horizontal|top"
-            android:lineSpacingExtra="8sp"
-            android:text="Add from Camera"
-            android:textAppearance="@style/add_from_ca" />
 
         <TextView
             android:id="@+id/upto_12mb"
             android:layout_width="85dp"
             android:layout_height="16dp"
             android:layout_alignBottom="@+id/rectangle_2"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="60dp"
             android:layout_marginTop="248dp"
-            android:layout_marginBottom="25dp"
+            android:layout_marginEnd="166dp"
+            android:layout_marginBottom="24dp"
             android:gravity="center_horizontal|top"
             android:text="up to 12 mb"
             android:textAppearance="@style/up_to_12_mb" />
