--- a/code/MoodSync/app/src/main/res/layout/custom_success_dialog.xml
+++ b/code/MoodSync/app/src/main/res/layout/custom_success_dialog.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/search_bar"
     android:padding="24dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center"
-        android:src="@drawable/img"
+        android:src="@drawable/birthday"
         android:scaleType="centerCrop"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
 
@@ -20,7 +21,8 @@
         android:layout_marginTop="24dp"
         android:text="Your mood has been successfully uploaded."
         android:textAlignment="center"
-        android:textSize="16sp"
-        android:textColor="#FFFFFF"/>
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="#203434"/>
 
 </LinearLayout>
