--- a/code/MoodSync/app/src/main/res/layout/get_started_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/get_started_fragment.xml
@@ -19,6 +19,16 @@
             android:layout_height="333dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="32dp" />
+        <!-- Centered Image -->
+        <ImageView
+            android:id="@+id/centered_image"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:src="@drawable/main_icon"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginTop="90dp"
+            android:layout_marginStart="70dp"
+            android:contentDescription="Centered Image" />
 
         <TextView
             android:id="@+id/welcome_to_"
@@ -27,6 +37,7 @@
             android:layout_below="@id/social_media"
             android:layout_marginTop="32dp"
             android:gravity="center"
+            android:textStyle="bold"
             android:lineSpacingExtra="-13sp"
             android:text="@string/welcome_to_"
             android:textAppearance="@style/welcome_to_" />
@@ -38,6 +49,8 @@
             android:layout_below="@id/welcome_to_"
             android:layout_marginTop="84dp"
             android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="25dp"
             android:lineSpacingExtra="14sp"
             android:text="@string/share_your_"
             android:textAppearance="@style/share_your_" />
@@ -54,7 +67,9 @@
             android:layout_marginEnd="128dp"
             android:text="Get Started"
             android:textColor="#FFFFFF"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            app:backgroundTint="#9ca49c"
+            android:background="@drawable/rounded_text"/>
 
     </RelativeLayout>
 
