--- a/code/MoodSync/app/src/main/res/values/styles.xml
+++ b/code/MoodSync/app/src/main/res/values/styles.xml
@@ -92,4 +92,12 @@
         <item name="cornerSize">10%</item>
     </style>
 
+    <!-- Custom Alert Dialog Style - ADDED -->
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
+
 </resources>
